added validation functions to AbsScheme; using FileAudioOutput in a3s-client